# sajtbyggaren

./: .cursorignore  .cursorindexignore  .cursorindexingignore  .env.example  .gitignore  .vercelignore  AGENTS.md  B157-WINDOWS-PROCESS-TREE-FYND.md  FOLJDPROMPT-LOOPEN.md  README.md  Untitled  arbetsflöde-agenter.txt  backend.py  backoffice.py  commands.txt  kill-dev-trees.bat  kill-dev-trees.py  konversation.txt  konversation_allmänt.txt  möjliga-buggar-gpt.txt  pyproject.toml  pyrightconfig.json  requirements-build.txt  requirements.txt  sajtbyggaren.code-workspace  viktig-input-2.txt  viktig-input-3.txt  viktig-input-4.txt  viktig-input.txt
.cursor/: BUGBOT.md  settings.json
.github/: pull_request_template.md
apps/: .gitkeep
backoffice/: __init__.py  asset_graph.py  discovery_control.py  discovery_wizard_diagnostics.py  env_panel.py  freshness.py  health.py  impact.py  industry_coverage.py  io.py  loaders.py  loop_proof.py  maintenance.py  mermaid.py  model_roles.py  paths.py  runtime_models.py  selection_profiles.py  sni_diagnostics.py  vercel_sync.py  view_registry.py
data/: model-pricing.json
docs/: PROJECT_BRIEF.md  active-sprint.md  agent-gotchas.md  agent-handbook.md  agent-inbox.jsonl  agent-prompts.md  agent-setup.md  backend-handoff-2026-05-22.md  backend-handoff.md  codeowners-proposal.md  current-focus.md  delivery-bias.md  diagnosis-and-handoff-2026-06-08.md  evals.md  glossary.md  handoff-2026-05-26-afternoon.md  handoff-2026-05-26-evening.md  handoff-2026-05-26-late-evening.md  handoff-2026-05-27-gap-batch-complete.md  handoff-christopher-ui-2026-06-02.md  handoff-pr-117-merge.md  handoff-viewser-ui-overhaul-2026-06-03.md  handoff.md  hosted-viewser-deploy.md  known-issues.md  llm-golden-path-handoff.md  llm-golden-path-runbook.md  migration-plan.md  orchestrator-playbook.md  ownership-map.md  path-b-backend-scout.md  product-north-star.md  product-operating-context.md  quality.md  reference-projects.md  scaffold-runtime-extension-needed.md  scout-orchestrator-handoff-2026-05-19.md  section-design-treatments-scout.md  sprintvakt-mcp.md  starter-contract.md  (+3 more)
examples/: advokatbyra-novum.project-input.json  arcade-hall.project-input.json  atelje-bird.project-input.json  cafe-bistro.project-input.json  clinic-tandvard.project-input.json  foto-ram.project-input.json  painter-palma.project-input.json  painter-palma.site-dossier.json  studio-bjork.project-input.json
referens/: README.md
scripts/: _repo_root.py  ai_bug_review.py  audit_starter_candidate.py  build_site.py  candidate_generation_metadata.py  check_adr_0021_workarounds.py  check_platform_baseline.py  check_term_coverage.py  classify_message.py  clean-runs.ps1  cleanup_dev_artifacts.py  cli_text.py  component_intake.py  dev-backoffice.ps1  dev-builder.ps1  dev-panel.ps1  dev-viewser.ps1  dev_generate.py  docs_check.py  dossier_candidate_intake.py  eval_gate.py  extract_sni_2025.py  fetch_model_prices.py  fetch_openclaw_docs.py  focus_check.py  gc_old_builds.py  generate_component_manifests.py  generate_dossier_candidate.py  generate_industry_profiles.py  generate_scaffold_candidate.py  generate_variant_candidate.py  governance_validate.py  list_open_bugs.py  lookup_sni.py  mini_eval.py  prompt_to_project_input.py  prune_generated_previews.py  review_check.py  rules_sync.py  run_eval_suite.py  (+13 more)
tests/: conftest.py  test_ai_bug_review.py  (+226 more)
(+1546 files in other folders)
