[project]
name = "sajtbyggaren"
version = "0.0.1"
description = "Sajtbyggaren backoffice och governance-verktyg"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.39",
  "jsonschema>=4.23",
  "pydantic>=2.9",
]

[tool.setuptools]
py-modules = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
