[project]
name = "sajtbyggaren"
version = "0.0.1"
description = "Sajtbyggaren backoffice and governance tooling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.49",
  "jsonschema>=4.23",
  "pydantic>=2.9",
  "openai>=2.41,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.8",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tooling*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
  "governance: governance and cross-policy consistency tests",
  "tooling: tests for scripts under scripts/",
  "core: fast core-loop regression lane (prompt -> bygge -> preview -> följdprompt); run with -m core, see docs/testing.md",
  "slow: tests that take more than a few seconds (e.g. real Next.js build); skipped automatically when prerequisite tooling like npm is unavailable",
  "e2e: end-to-end tests that call the real OpenAI API; gated on SAJTBYGGAREN_E2E=1 + OPENAI_API_KEY and skipped otherwise. Deselect from the fast lane with -m 'not e2e'",
  "requires_node: tests that shell out to Node.js/npm (e.g. next dev / npm build); skipped automatically when npm is unavailable. Deselect with -m 'not requires_node'",
  "smoke: tiny fast smoke subset for the quickest local sanity check; registered now, applied incrementally (see docs/testing.md)",
  "integration: hosted/viewser integration locks (apps/viewser source-level locks); run with -m integration, deselect from the fast lane with -m 'not integration'",
  "source_lock: historical source-code locks tied to a specific past bug/sprint; run or deselect them as a group with -m source_lock / -m 'not source_lock' (review candidates, see docs/testing.md)",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]
